# Analysis-of-taxi-rides

./: README.md  app.py  mlmodel.ipynb  model.pkl  pyproject.toml
